auto ip matching. for saving time.

--- a/config.env
+++ b/config.env
@@ -1,6 +1,8 @@
 AGENT_NAME="slave-01"
-JENKINS_URL="http://172.17.0.1:8080"
-TARGET="172.17.0.1/8080"
+JENKINS_HOST="172.17.0.1"
+JENKINS_URL="http://$JENKINS_HOST:8080"
+TARGET="$JENKINS_HOST/8080"
+HOSTNAME=$(getent hosts $JENKINS_HOST | awk '{print $1}')
 JENKINS_SECRET=""
 JNLP_AGENT_URL="$JENKINS_URL/computer/$AGENT_NAME/slave-agent.jnlp"
 JNLP_AGENT_DOWNLOAD_URL="$JENKINS_URL/jnlpJars/agent.jar"
