--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 AGENT_NAME="slave-01"
 JENKINS_HOST="172.17.0.1"
 JENKINS_URL="http://$JENKINS_HOST:8080"
-TARGET="$JENKINS_HOST/8080"
-HOSTNAME=$(getent hosts $JENKINS_HOST | awk '{print $1}')
+TARGET_IP=$(getent hosts $JENKINS_HOST | awk '{print $1}')
+TARGET="$TARGET_IP/8080"
 JENKINS_SECRET=""
 JNLP_AGENT_URL="$JENKINS_URL/computer/$AGENT_NAME/slave-agent.jnlp"
 JNLP_AGENT_DOWNLOAD_URL="$JENKINS_URL/jnlpJars/agent.jar"
